--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
@@ -29,7 +29,7 @@
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="polizaYSeguros">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Polizas y seguros </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Pólizas y seguros </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ getPoliza( element.tipoGarantiaCodigo ) }} </td>
             </ng-container>
             <ng-container matColumnDef="responsableAprobacion">
@@ -73,7 +73,7 @@
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === false ? semaforoAcordeones.acordeonObsEspecifica : ''">
-                    Observaciones especificas
+                    Observaciones específicas
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
