--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-lista-contratos/tabla-lista-contratos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-lista-contratos/tabla-lista-contratos.component.html
@@ -10,7 +10,7 @@
                 <td mat-cell *matCellDef="let element" align="center"> <em>{{ getTipoSolicitudContrato( element.tipoSolicitudCodigo ) }}</em> </td>
             </ng-container>
             <ng-container matColumnDef="contratista">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> nombre del contratista </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Contratista </th>
                 <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.nombre }}</em> </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
