--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/ver-detalle-editar-poliza-rapg/ver-detalle-editar-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/ver-detalle-editar-poliza-rapg/ver-detalle-editar-poliza-rapg.component.html
@@ -26,7 +26,7 @@
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="polizaYSeguros">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Polizas y seguros </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Pólizas y seguros </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{element.polizaYSeguros}} </td>
             </ng-container>
             <ng-container matColumnDef="responsableAprobacion">
@@ -68,7 +68,7 @@
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title en-alerta">
-                    Observaciones especificas
+                    Observaciones específicas
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <app-observaciones-especificas-rapg></app-observaciones-especificas-rapg>
