--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/ver-detalle-poliza-rapg/ver-detalle-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/ver-detalle-poliza-rapg/ver-detalle-poliza-rapg.component.html
@@ -26,7 +26,7 @@
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="polizaYSeguros">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Polizas y seguros </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Pólizas y seguros </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{element.polizaYSeguros}} </td>
             </ng-container>
             <ng-container matColumnDef="responsableAprobacion">
@@ -141,16 +141,16 @@
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
-                    Observaciones especificas
+                    Observaciones específicas
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <div style="text-align: center;">
-                <p><strong>¿Tiene observaciones especificas de la actualización?: </strong><em>Sí</em></p>
+                <p><strong>¿Tiene observaciones específicas de la actualización?: </strong><em>Sí</em></p>
             </div>
             <mat-card class="shipping-card mainGris">
                 <mat-card-header class="header-card header-card--margin">
                     <mat-card-title class="header-card--text textoGris">
-                        Observaciones especificas de la actualización
+                        Observaciones específicas de la actualización
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content style="text-align: left;">
