--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
@@ -114,7 +114,7 @@
   </mat-card>
 
 <div  class="text-center mb-3em mt-2em animatedDown"
-      *ngIf="addressForm.get('requiereTransladoRecursos').value === true && addressForm.get( 'justificacionTrasladoAportanteFuente' ).value !== null && balanceFinancieroId > 0">
+      *ngIf="addressForm.get('requiereTransladoRecursos').value === true && addressForm.get( 'justificacionTrasladoAportanteFuente' ).value !== null && balanceFinancieroId > 0 && trasladoPendiente === false">
     <a [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/registrarTraslado', id ]" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar traslado</a><br>  
 </div>
 
