--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/ver-traslados-recursos/ver-traslados-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/ver-traslados-recursos/ver-traslados-recursos.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container" *ngIf="proyecto !== undefined && balanceFinanciero !== undefined">
   <div class="text-center">
     <div class="text-right">
       <a routerLink="./.." mat-button color="primary" class="btn-regresar">
@@ -6,128 +6,73 @@
       </a>
     </div>
     <h1 class="title-menu--h1">
-      Traslados de recursos
-      LL457326
+      Traslados de recursos {{ proyecto.llaveMen }}
     </h1>
     <p class="colorMainColor mt-1em">
-      <span class="mx-1em"> Número de contrato de obra: <b> N801801 </b> </span>
-      <span class="mx-1em"> Número de contrato de interventoria: <b> A513513 </b> </span>
+      <span class="mx-1em"> Número de contrato de obra: <b> {{ proyecto.numeroContratoObra }} </b> </span>
+      <span class="mx-1em"> Número de contrato de interventoria: <b> {{ proyecto.numeroContratoInterventoria }} </b> </span>
     </p>
   </div>
 
   <mat-card class="shipping-card var-main-gris">
-    <mat-card-content>
-      <p>
-        <strong>
-          Tipo de intervención:
-        </strong>
-        Remodelación
-      </p>
-      <p>
-        <strong>
-          Institución Educativa:
-        </strong>
-        I.E Nuestra Señora Del Carmen
-      </p>
-      <p>
-        <strong>
-          Sede:
-        </strong>
-        Única Sede
-      </p>
-      <p>
-        <strong>
-          Departamento:
-        </strong>
-        Boyacá
-      </p>
-      <p>
-        <strong>
-          Municipio:
-        </strong>
-        Susacón
-      </p>
+    <mat-card-content align="left">
+        <p><strong>Tipo de intervención: </strong><em>{{ proyecto.tipoIntervencion }}</em></p>
+        <p><strong>Institución Educativa: </strong><em>{{ proyecto.institucionEducativa }}</em></p>
+        <p><strong>Sede educativa: </strong><em>{{ proyecto.sedeEducativa }}</em></p>
+        <p><strong>Departamento: </strong><em>{{ proyecto.departamento }}</em></p>
+        <p><strong>Municipio: </strong><em>{{ proyecto.municipio }}</em></p>
     </mat-card-content>
   </mat-card>
 
   <mat-card class="shipping-card var-main-gris">
     <mat-card-content>
-      <p>
-        <strong>
-          11/08/2021
-        </strong>
-      </p>
-      <p>
-        <strong>
-          ¿Se requiere registrar un traslado de recursos entre los aportantes y fuentes que financian este proyecto,
-          antes de aprobar el balance financiero?:
-        </strong>
-        No
+      <p><strong> <i> {{ balanceFinanciero.fechaCreacion | date: 'dd/MM/yyyy' }} </i> </strong></p>
+      <p><strong>¿Se requiere registrar un traslado de recursos entre los aportantes y fuentes que financian este proyecto, antes de aprobar el balance financiero?: </strong>
+        <span *ngIf="balanceFinanciero.requiereTransladoRecursos === true"> <i> Si </i> </span>
+        <span *ngIf="balanceFinanciero.requiereTransladoRecursos === false"> <i> No </i> </span>
       </p>
     </mat-card-content>
   </mat-card>
 
-  <div class="table-responsive mb-2em w-table">
-    <table class="mat-table cdk-table mat-sort mat-table-style table-form table-gris">
-      <thead>
-        <tr class="mat-header-row cdk-header-row ng-star-inserted">
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Fecha de traslado
-          </th>
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Número de traslado
-          </th>
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Número de contrato
-          </th>
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Número de orden de giro
-          </th>
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Valor del traslado
-          </th>
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Estado del traslado
-          </th>
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Gestión
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let element of listaTraslados">
-          <td class="mat-cell cdk-cell ng-star-inserted">
-            <b> {{ element.fechaTraslado }} </b>
-          </td>
-          <td class="mat-cell cdk-cell ng-star-inserted">
-            {{ element.numeroTraslado }}
-          </td>
-          <td class="mat-cell cdk-cell ng-star-inserted">
-            {{ element.numeroContrato }}
-          </td>
-          <td class="mat-cell cdk-cell ng-star-inserted">
-            {{ element.numeroOrdenGiro }}
-          </td>
-          <td class="mat-cell cdk-cell ng-star-inserted">
-            {{ element.valorTraslado }}
-          </td>
-          <td class="mat-cell cdk-cell ng-star-inserted">
-            {{ element.estadoTraslado }}
-          </td>
-          <td class="mat-cell cdk-cell ng-star-inserted">
-            <a
-              mat-button
-              mat-raised-button
-              color="accent"
-              class="btn-table"
-              [routerLink]="['verDetalle', element.id]"
-            >
-              Ver detalle
-            </a>
-          </td>
-        </tr>
-      </tbody>
+  <div class="tabla-expansion-panel tabla-gris" *ngIf="balanceFinanciero.requiereTransladoRecursos === true">
+    <table mat-table [dataSource]="dataSource" matSort class="tabla mat-elevation-z8 text-center">
+        <ng-container matColumnDef="fechaTraslado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de traslado </th>
+            <td mat-cell *matCellDef="let element"> <b>{{element.fechaCreacion}}</b> </td>
+        </ng-container>
+        <ng-container matColumnDef="numTraslado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de traslado </th>
+            <td mat-cell *matCellDef="let element"><em>{{element.numeroTraslado}}</em> </td>
+        </ng-container>
+        <ng-container matColumnDef="numContrato">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de contrato</th>
+            <td mat-cell *matCellDef="let element"><em>{{element.numeroContrato}}</em> </td>
+        </ng-container>
+        <ng-container matColumnDef="numOrdenGiro">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Número de orden de giro</th>
+            <td mat-cell *matCellDef="let element"> <em>{{element.numeroOrdenGiro}}</em> </td>
+        </ng-container>
+        <ng-container matColumnDef="valorTraslado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor del traslado</th>
+            <td mat-cell *matCellDef="let element"> <em>{{element.valorTraslado | currency: '':'symbol-narrow':'.0-0'}}</em> </td>
+        </ng-container>
+        <ng-container matColumnDef="estadoTraslado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del traslado</th>
+            <td mat-cell *matCellDef="let element"> <em>{{getEstadoTraslado( element.estadoCodigo )}}</em> </td>
+        </ng-container>
+        <ng-container matColumnDef="gestion">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        [routerLink]="[ urlDetalle, element.numeroOrdenGiro ]">
+                        Ver detalle
+                </button>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
-
 </section>
